Revert "fixed wrapping in index view. about to redo thread view"
This reverts commit ec636f9af1aebbffa321aa8adfef1b7ddace5b8a.

--- a/wwwroot/css/BoardIndex.css
+++ b/wwwroot/css/BoardIndex.css
@@ -15,27 +15,17 @@ body {
 
 img {
     max-width: 90vw;
-    object-fit: contain;
+    
 }
 
 .Files {
-    max-width: 50vw;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    max-width: 70vw;
     /*overflow: auto;*/
 }
 
-.FilesTextContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 50vw;
-}
-
 div.OpPic {
-    display: flex;
-    /*float: left;*/
+    display: block;
+    float: left;
     width: max-content;
     margin: 10px;
 }
@@ -224,9 +214,7 @@ div.OpPicExpanded {
 .PostText {
     max-width: 100vw;
     word-break: normal;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+
 }
 
 .PostInfo {
